[gd_scene load_steps=2 format=2]

[ext_resource path="res://entities/action_track/trigger/trigger.gd" type="Script" id=1]

[node name="Trigger" type="Area" groups=[
"trigger",
]]
collision_layer = 8
collision_mask = 4
script = ExtResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
